syntax = "proto3";
package shortlink;


service ShortLink {
	rpc GetInfo(ShortLinkRequest) returns (ShortLinkResponse);
}


message ShortLinkRequest {
    string id = 1;
}

message ShortLinkResponse {
    string url = 1;
}
